Actualizacion Feature Engineering

--- a/Notebooks/02_feature_engineering.ipynb
+++ b/Notebooks/02_feature_engineering.ipynb
@@ -24,16 +24,22 @@
     "\n",
     "from pyspark.sql.functions import avg\n",
     "\n",
-    "# Leer datos limpios desde tabla\n",
+    "# Leer datos limpios\n",
     "df = spark.table(\"datalottery.lotterybets.lottery_bets_dirty_cleaned\")\n",
     "\n",
-    "# Promedio de monto por usuario\n",
+    "# Promedio de monto apostado por usuario\n",
     "avg_stake = df.groupBy(\"user_id\").agg(avg(\"stake_amount\").alias(\"avg_stake_amount\"))\n",
     "\n",
-    "# Selección de features\n",
+    "# Riesgos agregados por usuario\n",
+    "user_risk_avg = df.groupBy(\"user_id\").agg(\n",
+    "    avg(\"ip_risk\").alias(\"avg_user_ip_risk\"),\n",
+    "    avg(\"geo_risk\").alias(\"avg_user_geo_risk\")\n",
+    ")\n",
+    "\n",
+    "# Base features\n",
     "features_df = df.select(\n",
     "    \"user_id\",\n",
-    "    \"bets_last_7d\",\n",
+    "    \"bets_last_7d\",             # Ya tienes esta variable derivada\n",
     "    \"win_rate_last_30d\",\n",
     "    \"ip_risk\",\n",
     "    \"geo_risk\",\n",
@@ -41,11 +47,38 @@
     "    \"suspicious\"\n",
     ").dropDuplicates([\"user_id\"])\n",
     "\n",
-    "# Unión con el promedio\n",
-    "features_df = features_df.join(avg_stake, on=\"user_id\", how=\"left\")\n",
+    "# Unión de todas las features\n",
+    "features_df = features_df \\\n",
+    "    .join(avg_stake, on=\"user_id\", how=\"left\") \\\n",
+    "    .join(user_risk_avg, on=\"user_id\", how=\"left\")\n",
     "\n",
-    "# Guardar como tabla Delta\n",
-    "features_df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"datalottery.lotterybets.lottery_bets_dirty_features\")"
+    "# Guardar tabla final\n",
+    "features_df.write \\\n",
+    "    .format(\"delta\") \\\n",
+    "    .mode(\"overwrite\") \\\n",
+    "    .option(\"mergeSchema\", \"true\") \\\n",
+    "    .saveAsTable(\"datalottery.lotterybets.lottery_bets_dirty_features\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9705355e-32fa-487c-b5db-ea34709a5758",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(df.columns)"
    ]
   }
  ],
