cambios en auditoria

--- a/Notebooks/02_feature_engineering.ipynb
+++ b/Notebooks/02_feature_engineering.ipynb
@@ -39,7 +39,7 @@
     "# Base features\n",
     "features_df = df.select(\n",
     "    \"user_id\",\n",
-    "    \"bets_last_7d\",             # Ya tienes esta variable derivada\n",
+    "    \"bets_last_7d\",            \n",
     "    \"win_rate_last_30d\",\n",
     "    \"ip_risk\",\n",
     "    \"geo_risk\",\n",
